--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "^1.32.0",
     "next": "12.2.0",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.2.0",
     "stripe": "^9.12.0",
