--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.2.0",
+    "react-router-dom": "^6.9.0",
     "stripe": "^9.12.0",
     "zustand": "^4.0.0-rc.1"
   },
