--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.9.0",
     "stripe": "^9.12.0",
