--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dotenv": "^0.1.3",
     "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.9.0",
+    "react-toastify": "^9.1.3",
     "stripe": "^9.12.0",
     "zustand": "^4.0.0-rc.1"
   },
