--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-dotenv": "^0.1.3",
     "react-hot-toast": "^2.2.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.3",
     "stripe": "^9.12.0",
