--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.2.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.9.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "stripe": "^9.12.0",
     "zustand": "^4.0.0-rc.1"
