--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cogo-toast": "^4.2.3",
     "lottie-react-native": "^5.1.6",
     "next": "12.2.0",
+    "nextjs-toploader": "^1.6.4",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
